--- a/.github/workflows/golang.yaml
+++ b/.github/workflows/golang.yaml
@@ -38,9 +38,9 @@ jobs:
       - name: install atlas CLI
         run: curl -sSf https://atlasgo.sh | sh
       - name: test all
-        run: go test github.com/peterldowns/pgtestdb/...
+        run: go test github.com/Bikappa/pgtestdb/...
       - name: test all -race
-        run: go test -race github.com/peterldowns/pgtestdb/...
+        run: go test -race github.com/Bikappa/pgtestdb/...
   lint:
     runs-on: ubuntu-latest
     steps:
